# aitoolbox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODOS.md  docker-compose.embeddings.ollama.yml  docker-compose.embeddings.tei.yml  docker-compose.embeddings.yml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: docs-audit-check.yml  release-knowledge-cli.yml  retrieval-eval.yml
config/: README.md
config/knowledge/: sources.example.json
config/knowledge/eval/: smoke-baseline.json  smoke-dataset.json  smoke-source.json
config/knowledge/schemas/: entity.schema.json  issue.schema.json  lesson.schema.json  pipeline-payload.schema.json
crates/knowledge-cli/: Cargo.toml
crates/knowledge-cli/src/: main.rs
crates/knowledge-cli/tests/: contracts.rs  eval_cli.rs  help.rs  pipeline_cli.rs  query_cli.rs
crates/knowledge-core/: Cargo.toml
crates/knowledge-core/src/: audit.rs  capture.rs  config.rs  embed.rs  import.rs  ingest.rs  input_schema.rs  lib.rs  migrations.rs  model.rs  notes.rs  recall.rs  schema.rs  store.rs
crates/knowledge-core/tests/: audit_history.rs  capture.rs  config_resolution.rs  embed_math.rs  exact_lookup.rs  import_sources.rs  ingest_pipeline.rs  query_output.rs  recall_ranking.rs  schema_bootstrap.rs  schema_migrate_verify.rs  schema_validation.rs
crates/knowledge-core/tests/fixtures/contracts/v1/: get_success.json
crates/knowledge-daemon/: Cargo.toml
crates/knowledge-daemon/src/: http.rs  main.rs
docs/: .audit-state.json  CONTRACT_TESTING.md  README.md  audit-workflow.md  remediation-plan.md
docs/adr/: README.md
docs/architecture/: README.md  core-concepts.md  repo-structure.md  storage-options.md  validation-principles.md
docs/features/: README.md
docs/features/containerized-superpowers-companion/: README.md  implementation-plan.md  resources.md
docs/features/knowledge-system/: README.md  implementation-plan.md
docs/features/knowledge-system-skills/: README.md
docs/ideas/: README.md  future-features.md
docs/implementation-plans/: 01-cli-help-example-misleads.md  02-get-hides-repo-location.md  03-no-discovery-subcommand.md  04-ingestion-under-populates-aliases.md  05-skill-doesnt-teach-naming.md  06-required-explicit-null-input-schema.md  07-get-falls-back-to-entity-summary.md  08-get-returns-children-on-parent-match.md  README.md
docs/issues/: 01-cli-help-example-misleads.md  02-get-hides-repo-location.md  03-no-discovery-subcommand.md  04-ingestion-under-populates-aliases.md  05-skill-doesnt-teach-naming.md  06-required-explicit-null-input-schema.md  README.md  get-falls-back-to-entity-summary.md  get-returns-children-on-parent-match.md
docs/superpowers/dispatch/: 2026-05-25-agent-1-brief.md  2026-05-25-agent-2-brief.md  2026-05-25-agent-3-brief.md  2026-05-25-spec-08-daemon-draft-todos.md
docs/superpowers/plans/: 2026-05-23-knowledge-system.md  2026-05-25-reconciled-todos-implementation.md
docs/superpowers/specs/: 2026-05-24-knowledge-cli-skills-design.md  2026-05-25-reconciled-01-schema-migrations-design.md  2026-05-25-reconciled-02-provenance-audit-design.md  2026-05-25-reconciled-03-unified-contract-fixtures-design.md  2026-05-25-reconciled-04-config-authority-design.md  2026-05-25-reconciled-05-hybrid-recall-eval-design.md  2026-05-25-reconciled-05b-retrieval-quality-hardening-design.md  2026-05-25-reconciled-06-ingestion-pipeline-design.md  2026-05-25-reconciled-06b-ingestion-reliability-addendum.md  2026-05-25-reconciled-07-docs-code-audit-design.md  2026-05-25-reconciled-08-daemon-service-last-design.md  2026-05-25-reconciled-09-embedding-provider-abstraction-design.md  2026-05-25-reconciled-10-vector-storage-and-indexing-design.md  2026-05-25-reconciled-11-cli-embedding-workflows-design.md  2026-05-25-reconciled-12-daemon-parity-for-embeddings-design.md
examples/: README.md
knowledge/: README.md
knowledge/templates/: domain.md  issue.md  lesson.md  library.md  project.md  system.md
plugins/aitoolbox-knowledge-skills/: README.md
plugins/aitoolbox-knowledge-skills/.claude-plugin/: plugin.json
plugins/aitoolbox-knowledge-skills/.codex-plugin/: plugin.json
plugins/aitoolbox-knowledge-skills/skills/knowledge-get/: SKILL.md
plugins/aitoolbox-knowledge-skills/skills/knowledge-refresh/: SKILL.md
plugins/aitoolbox-knowledge-skills/skills/knowledge-update/: SKILL.md
projects/: README.md
scripts/: audit-docs.sh  migrate-knowledge-db.sh
skills/: README.md
skills/core/: README.md
skills/core/knowledge-get/: SKILL.md
skills/core/knowledge-refresh/: SKILL.md
skills/core/knowledge-update/: SKILL.md
tests/: audit_docs.sh
