[workspace]
members = ["crates/knowledge-core", "crates/knowledge-cli", "crates/knowledge-daemon"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
camino = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
predicates = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
walkdir = "2"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "compression-br", "compression-gzip", "timeout"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
http = "1"
http-body-util = "0.1"
