[workspace]
members = ["crates/knowledge-core", "crates/knowledge-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
camino = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
jsonschema = "0.18"
predicates = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
walkdir = "2"
