[package]
name = "knowledge-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
default-run = "knowledge-cli"

[[bin]]
name = "knowledge-cli"
path = "src/main.rs"

[[bin]]
name = "knwl"
path = "src/bin/knwl.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
knowledge-core = { path = "../knowledge-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
