[package]
name = "knowledge-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
knowledge-core = { path = "../knowledge-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
