[package]
name = "knowledge-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
ureq.workspace = true
md5.workspace = true

[dev-dependencies]
tempfile.workspace = true
