[package]
name = "knowledge-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
camino.workspace = true
http.workspace = true
knowledge-core = { path = "../knowledge-core" }
rusqlite.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
tempfile.workspace = true
